dataset deleted from user service
