# routes/web.php
@@ -17,14 +17,8 @@ $router->get('users', 'UserController@show');
 $router->get('users/{id}', 'UserController@get');
 $router->post('users', 'UserController@create');
 $router->delete('users/{id}', 'UserController@delete');
-$router->put('users/{id}', 'UserController@update');
+$router->put('users', 'UserController@update');
 $router->post('users/attempt', 'UserController@attempt');
 
 $router->post('users/{id}/roles', 'RoleController@add');
 $router->delete('users/{id}/roles', 'RoleController@delete');
-
-$router->get('datasets', 'DatasetController@show');
-$router->get('datasets/{id}', 'DatasetController@get');
-$router->put('datasets', 'DatasetController@update');
-$router->get('users/{id}/datasets', 'DatasetController@getByUser');
-$router->post('users/{id}/datasets', 'DatasetController@create');
