# storage/api-docs/api-docs.json
@@ -6,169 +6,6 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/datasets": {
-            "get": {
-                "tags": [
-                    "Dataset"
-                ],
-                "summary": "Dataset show",
-                "operationId": "03a25edb34565c70dbac2d4cbb96f1fd",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/Dataset"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "Dataset"
-                ],
-                "summary": "Dataset update",
-                "operationId": "c8720acc01283a7c6f0e3bf1e2591e15",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/Dataset"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Dataset"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    }
-                }
-            }
-        },
-        "/datasets/{id}": {
-            "get": {
-                "tags": [
-                    "Dataset"
-                ],
-                "summary": "Dataset get by ID",
-                "operationId": "9a82b19cc4e22b94a7da5536ccb91813",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Dataset id",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Dataset"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    }
-                }
-            }
-        },
-        "users/{id}/datasets": {
-            "get": {
-                "tags": [
-                    "Dataset"
-                ],
-                "summary": "Get datasets of user",
-                "operationId": "2908beaa6f5069295b52e6ac50a718c4",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "User id",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/Dataset"
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "Dataset"
-                ],
-                "summary": "Create dataset for user",
-                "operationId": "b681c12fcdbb297e847154f25e46bdd8",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "User id",
-                        "required": true
-                    }
-                ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/Dataset"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "201": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/Dataset"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    }
-                }
-            }
-        },
         "/users/{id}/roles": {
             "post": {
                 "tags": [
@@ -452,56 +289,6 @@
     },
     "components": {
         "schemas": {
-            "Dataset": {
-                "title": "Dataset",
-                "description": "Dataset model",
-                "properties": {
-                    "id": {
-                        "title": "id",
-                        "description": "id",
-                        "example": 1
-                    },
-                    "user_id": {
-                        "title": "user_id",
-                        "description": "user_id",
-                        "example": 1
-                    },
-                    "type": {
-                        "title": "type",
-                        "description": "type",
-                        "example": "CREATOR"
-                    },
-                    "content": {
-                        "title": "content",
-                        "description": "content",
-                        "example": "Documents 123"
-                    },
-                    "status": {
-                        "title": "status",
-                        "description": "status",
-                        "example": "PENDING"
-                    },
-                    "comment": {
-                        "title": "comment",
-                        "description": "comment",
-                        "example": "Wrong name"
-                    },
-                    "created_at": {
-                        "title": "created_at",
-                        "description": "created_at",
-                        "example": "2022-01-22T21:34:30.000000"
-                    },
-                    "updated_at": {
-                        "title": "updated_at",
-                        "description": "updated_at",
-                        "example": "2022-01-22T21:34:30.000000"
-                    }
-                },
-                "type": "object",
-                "xml": {
-                    "name": "Dataset"
-                }
-            },
             "Role": {
                 "title": "Role",
                 "description": "Role model",
